# BalanceBot

./: BalanceBot.ino  CMakeLists.txt  dxl_hal.c  package.xml  piresources.txt  setgains.sh
documentation/: FinalReport.aux  FinalReport.bcf  FinalReport.out  FinalReport.run.xml  FinalReport.tex
documentation/auto/: FinalReport.el
launch/: balance.launch  tilt1.yaml  tilt2.yaml  tilt3.yaml  wing.launch
sandbox/: sketch_mar29a.ino
src/Control/: CMakeLists.txt  control.cpp  control.h  main.cpp
src/ardupilot/: CMakeLists.txt  SerialPort.cpp  ardupilot.cpp
